# phetch

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  conf  phetch.conf
.github/workflows/: build.yml  release.yml  rust.yml  test.yml
benches/: parse_gopher.rs  rfc1436.txt  rpod.txt
benchmarks/: Cargo.toml
benchmarks/benches/: render_menu.rs  render_text.rs  sdf.txt  unix.txt
benchmarks/src/: main.rs
doc/: phetch.1  phetch.1.md  release.md
img/: screencast.yml
src/: args.rs  bookmarks.rs  color.rs  config.rs  encoding.rs  gopher.rs  help.rs  history.rs  lib.rs  main.rs  menu.rs  page.rs  phetchdir.rs  stub.rs  terminal.rs  text.rs  theme.rs  types.rs  ui.rs  utils.rs  view.rs
src/gopher/: type.rs
src/menu/: menu_view.rs  mod.rs
src/ui/: action.rs  mode.rs  view.rs
tests/: CP437.txt  pink.theme
themes/: default.theme  light.theme  matrix.theme  vaporwave.theme  web.theme
