[package]
name = "phetch"
version = "0.1.13"
authors = ["chris west <c@xvxx.io>"]
license = "MIT"
edition = "2018"
description = "quick lil gopher client"
readme = "README.md"
repository = "https://github.com/xvxx/phetch"
keywords = ["gopher", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "img/*"
]

[features]
disable-tls = []
default =[]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="phetch-v\\d+\\.\\d+\\.\\d+-", replace="{{crate_name}}-v{{version}}-"},
  {file="README.md", search="/v\\d+\\.\\d+\\.\\d+/", replace="/v{{version}}/"},
]
dev-version-ext = "dev"

[dependencies]
termion = "1.5.3"
native-tls = "0.2"
libc = "0.2.66"
tor-stream = "0.2.0"
atty = "0.2.14"
