[package]
name = "phetch"
version = "1.0.7-dev"
authors = ["chris west <c@xvxx.io>"]
license = "MIT"
edition = "2018"
description = "quick lil gopher client"
readme = "README.md"
repository = "https://github.com/xvxx/phetch"
keywords = ["gopher", "tui", "terminal", "cli"]
categories = ["command-line-utilities"]
exclude = [
    "img/*"
]

[features]
tls = ["native-tls"]
tor = ["tor-stream"]
default = ["tls", "tor"]

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
opt-level = 'z'  # Optimize for size.

# Change v1.4.1 -> v1.4.2 in README on `cargo release`
[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="phetch-v\\d+\\.\\d+\\.\\d+-", replace="{{crate_name}}-v{{version}}-"},
  {file="README.md", search="/v\\d+\\.\\d+\\.\\d+/", replace="/v{{version}}/"},
  {file="CHANGELOG.md", search="\\d+\\.\\d+\\.\\d+-dev", replace="{{version}}"},
]
dev-version-ext = "dev"

[dependencies]
termion = "1.5.5"
libc = "0.2.66"
atty = "0.2.14"
lazy_static = "1.4"

tor-stream = { version = "0.2.0", optional = true }
native-tls = { version = "0.2", optional = true }
