[package]
name = "phetch-benchmarks"
version = "0.1.0"
authors = ["chris west <c@xvxx.io>"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "parse_gopher"
harness = false

[[bench]]
name = "render_menu"
harness = false

[[bench]]
name = "render_text"
harness = false

[dependencies]
phetch = { path = ".." }
